# rover

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  README.md  install.sh
crates/rover-client/: Cargo.toml
crates/rover-client-v2/: Cargo.toml
crates/rover-client-v2/src/: app.rs  main.rs  message.rs  theme.rs  update.rs  view.rs
crates/rover-client-v2/src/api/: client.rs
crates/rover-client-v2/src/screens/: ansi.rs  app_detail.rs  dashboard.rs  deploy.rs  mod.rs  terminal.rs
crates/rover-client-v2/src/widgets/: mod.rs  sidebar.rs  status_bar.rs  toast.rs
crates/rover-client/src/: app.rs  deploy_job.rs  deploy_update.rs  github_tokens.rs  main.rs  message.rs  state.rs  theme.rs  update.rs  view.rs
crates/rover-client/src/api/: client.rs
crates/rover-client/src/screens/: connections.rs  dashboard.rs  deploy.rs  detail.rs  mod.rs  terminal.rs
crates/rover-client/src/state/: connection.rs  profiles.rs
crates/rover-client/src/widgets/: app_card.rs  dashboard.rs  deploy.rs  detail.rs  log_viewer.rs  metric_bar.rs  mod.rs  sidebar.rs
crates/rover-core/: Cargo.toml
crates/rover-core/src/: error.rs  lib.rs  manifest.rs  profile.rs  status.rs
crates/rover-proto/: Cargo.toml  build.rs
crates/rover-proto/src/: lib.rs
crates/rover-server/: Cargo.toml
crates/rover-server/src/: auth.rs  bore.rs  deploy.rs  health.rs  main.rs  metrics.rs  process.rs  server.rs  state.rs
crates/rover-server/src/runtime/: go.rs  mod.rs  node.rs  python.rs  rust.rs
crates/rover-transport/: Cargo.toml
crates/rover-transport-lan/: Cargo.toml
crates/rover-transport-lan/src/: lib.rs
crates/rover-transport-relay/: Cargo.toml
crates/rover-transport-relay/src/: lib.rs
crates/rover-transport/src/: lib.rs
proto/rover/v1/: app.proto  auth.proto  common.proto  server.proto
scripts/: _p.py  _patch.py  _patch_sidebar.py  build-macos.sh  cpu.sh  install.sh  update.sh
