[workspace]
members = [
    "crates/rover-core",
    "crates/rover-proto",
    "crates/rover-transport",
    "crates/rover-transport-lan",
    "crates/rover-transport-relay",
    "crates/rover-server",
    "crates/rover-client",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rover/rover"
rust-version = "1.85"

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# --- gRPC & Protobuf ---
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-build = "0.13"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# --- Server ---
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
sysinfo = "0.32"
flate2 = "1"
tar = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# --- Client ---
iced = { version = "0.13", features = ["tokio", "system"] }
rfd = { version = "0.14", features = ["async-std"] }

# --- Shared ---
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# --- Internal crates ---
rover-core = { path = "crates/rover-core" }
rover-proto = { path = "crates/rover-proto" }
rover-transport = { path = "crates/rover-transport" }
rover-transport-lan = { path = "crates/rover-transport-lan" }
rover-transport-relay = { path = "crates/rover-transport-relay" }
