[package]
name = "rover-client-v2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "rover"
path = "src/main.rs"

[dependencies]
rover-core.workspace = true
rover-proto.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
flate2.workspace = true
tar.workspace = true
uuid.workspace = true
chrono.workspace = true
iced.workspace = true
rfd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
lucide-icons = { workspace = true, features = ["iced"] }
