[package]
name = "rover-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rover"
path = "src/main.rs"

[dependencies]
rover-core.workspace = true
rover-proto.workspace = true
rover-transport.workspace = true
rover-transport-lan.workspace = true
rover-transport-relay.workspace = true

tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
iced.workspace = true
rfd.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
