[package]
name = "rover-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "roverd"
path = "src/main.rs"

[dependencies]
rover-core.workspace = true
rover-proto.workspace = true
rover-transport.workspace = true
rover-transport-lan.workspace = true
rover-transport-relay.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection = "0.12"
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
clap.workspace = true
uuid.workspace = true
sha2.workspace = true
rand.workspace = true
sysinfo.workspace = true
flate2.workspace = true
tar.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
